Correcting for spacing issue on the responsive table.

--- a/css/default.css
+++ b/css/default.css
@@ -310,7 +310,7 @@ table.leaderboard td:nth-child(1) {
 		border: none;
 		border-bottom: 1px solid #eee;
 		position: relative;
-		padding-left: 50%;
+		padding-left: 60%;
 	}
 
 	table.leaderboard td:before {
